# sdk-python

./: .gitignore  README.md  requirements.txt  setup.py  test-drd.sh
.circleci/: config.yml
ascend/: __init__.py  auth.py  client.py  credentials.py  jinja.py  lineage.py  model.py  resource.py  resource_definitions.py  session.py  transforms.py  util.py
ascend/cli/: cli.py  global_values.py  main.py  sh.py
ascend/protos/: README.md  copy-protos.sh  gen-py.sh
ascend/protos/ascend/: BUILD.bazel  ascend_pb2.py
ascend/protos/content_encoding/: BUILD.bazel  content_encoding.proto  content_encoding_pb2.py
ascend/protos/format/: BUILD.bazel  format.proto  format_pb2.py
ascend/protos/function/: BUILD.bazel  function.proto  function_pb2.py
ascend/protos/io/: BUILD.bazel  io.proto  io_pb2.py
ascend/protos/operator/: BUILD.bazel  operator.proto  operator_pb2.py
ascend/protos/pattern/: BUILD.bazel  pattern_pb2.py
ascend/protos/resource/: BUILD.bazel  resource.proto  resource_pb2.py
ascend/protos/schema/: BUILD.bazel  schema.proto  schema_pb2.py
ascend/protos/text/: BUILD.bazel  text.proto  text_pb2.py
docs/: pydocmd.yml
docs/markdown/ascend/: README.md  client.md  model.md
examples/: Access the Structured Data Lake with Spark.ipynb  Ascend PySpark Transform Notebook.ipynb  Data Feed API.ipynb  Dataflow API.ipynb  Lineage API.ipynb  ascend
protos/ascend/: ascend.proto
protos/content_encoding/: content_encoding_pb2.py
protos/format/: format_pb2.py
protos/function/: function.proto
protos/io/: io.proto  io_pb2.py
protos/operator/: operator_pb2.py
protos/pattern/: pattern.proto  pattern_pb2.py
protos/resource/: resource.proto  resource_pb2.py
protos/schema/: schema.proto  schema_pb2.py
protos/text/: text.proto
tests/: test.py  test_credentials.py  test_credentials_components.yaml  test_credentials_creds.yaml  test_resource.py  test_sql_template.sql  test_sql_template.yaml  test_template_config.yaml  test_templates.py  test_templates.yaml
tests/expected/: crc.yaml  crc_byte_function.py  crc_lambda_parser.py  immediate1.yaml  immediate2.yaml  pyspark.yaml  pyspark_pyspark.py  sql.sql  sql.yaml
tests/expected/immediate1/: ascend_text_blob
tests/expected/immediate2/: f2.csv
tests/integration/: drd_test_1_file_copy.yaml  drd_test_2_file.yaml  example_config.yaml
tests/integration/drd_test_1_dir/: __metadata__.yaml
tests/integration/drd_test_1_dir/ksink_templated/: Azure_Blob_Read.yaml  Azure_Blob_Read_service_principal.yaml  Azure_Blob_Write.yaml  Azure_Blob_Write_service_principal.yaml  BigQuery.yaml  BigQueryPFS.yaml  Blob_Grok.yaml  Blob_JSON_hourly_small_metadata.yaml  Blob_Parser_Function.yaml  Blob_UDP.yaml  CSV_hourly_small.yaml  CSV_hourly_small_view.yaml  Cascading_PySpark_Sink.yaml  Cascading_PySpark_with_filter.yaml  Cascading_SQL_after_PySpark_with_filter.yaml  GCS_Avro.yaml  GCS_CSV_hourly_small__12_20_.yaml  GCS_CSV_hourly_small__12_21_.yaml  GCS_JSON.yaml  GCS_JSON_Part_Files.yaml  GCS_Parquet.yaml  GCS_XSV.yaml  GCS_XSV_Part_Files.yaml  Group_By.yaml  Group_By_filename_hour.yaml  Group_By_with_Inner_Join.yaml  Hourly_small_Union.yaml  Join_with_3_hour_window.yaml  Map_with_inner_join.yaml  Map_with_where.yaml  No_Change.yaml  Orders.yaml  Orders_by_hour.yaml  Partitioned_Redshift_Sink_Part_Files.yaml  Partitioned_Snowflake_Sink.yaml  PySpark_Group_By.yaml  PySpark_Group_By_Auto.yaml  PySpark_Group_By_with_Inner_Join.yaml  PySpark_Map_with_inner_join.yaml  PySpark_Reduction_with_Inner_Join.yaml  (+20 more)
tests/integration/drd_test_1_dir/pub/: __metadata__.yaml  src1.yaml  src2.yaml  src3.yaml  v1.yaml  v2.yaml  v3.yaml
tests/integration/drd_test_1_dir/source/: __metadata__.yaml  src1.yaml
tests/integration/drd_test_1_dir/sub/: sub_v1.yaml  sub_v2.yaml
tests/integration/drd_test_2_dir/: __metadata__.yaml
tests/integration/drd_test_2_dir/sub/: __metadata__.yaml  cross_ds_1.yaml  cross_ds_selective_2.yaml
tests/template_dir/: f1.jsonl  f2.jsonl
tests/template_produce/: crc.yaml  immediate1.yaml  immediate2.yaml  pyspark.yaml  sql.yaml
