load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "ascend_proto",
    srcs = ["ascend.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "ascend_go_proto",
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/ascend",
    proto = ":ascend_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":ascend_go_proto"],
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/ascend",
    visibility = ["//visibility:public"],
)
