load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "content_encoding_proto",
    srcs = ["content_encoding.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "content_encoding_go_proto",
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/content_encoding",
    proto = ":content_encoding_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":content_encoding_go_proto"],
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/content_encoding",
    visibility = ["//visibility:public"],
)
