load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "io_proto",
    srcs = ["io.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//ascend/protos/ascend",
        "//ascend/protos/content_encoding",
        "//ascend/protos/format",
        "//ascend/protos/function",
        "//ascend/protos/pattern",
        "//ascend/protos/schema",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "io_go_proto",
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/io",
    proto = ":io_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//ascend/protos/ascend:go_default_library",
        "//ascend/protos/content_encoding:go_default_library",
        "//ascend/protos/format:go_default_library",
        "//ascend/protos/function:go_default_library",
        "//ascend/protos/pattern:go_default_library",
        "//ascend/protos/schema:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":io_go_proto"],
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/io",
    visibility = ["//visibility:public"],
)
