load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "operator_proto",
    srcs = ["operator.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//ascend/protos/ascend",
        "//ascend/protos/format",
        "//ascend/protos/io",
        "//ascend/protos/schema",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "operator_go_proto",
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/operator",
    proto = ":operator_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//ascend/protos/ascend:go_default_library",
        "//ascend/protos/format:go_default_library",
        "//ascend/protos/io:go_default_library",
        "//ascend/protos/schema:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":operator_go_proto"],
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/operator",
    visibility = ["//visibility:public"],
)
