load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "resource_proto",
    srcs = ["resource.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//ascend/protos/content_encoding",
        "//ascend/protos/io",
        "//ascend/protos/operator",
        "//ascend/protos/pattern",
        "//ascend/protos/schema",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "resource_go_proto",
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/resource",
    proto = ":resource_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//ascend/protos/content_encoding:go_default_library",
        "//ascend/protos/io:go_default_library",
        "//ascend/protos/operator:go_default_library",
        "//ascend/protos/pattern:go_default_library",
        "//ascend/protos/schema:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":resource_go_proto"],
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/resource",
    visibility = ["//visibility:public"],
)
