load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "schema_proto",
    srcs = ["schema.proto"],
    visibility = ["//visibility:public"],
    deps = ["//ascend/protos/ascend"],
)

go_proto_library(
    name = "schema_go_proto",
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/schema",
    proto = ":schema_proto",
    visibility = ["//visibility:public"],
    deps = ["//ascend/protos/ascend:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":schema_go_proto"],
    importpath = "github.com/ascend-io/source/backend/notebook/jupyter/sdk-python/ascend/protos/schema",
    visibility = ["//visibility:public"],
)
